Fixed bug align md-sidenav

--- a/ui/ui-app/src/main/resources/static/assets/medikly_theme/styles/scss/kylo/app.scss
+++ b/ui/ui-app/src/main/resources/static/assets/medikly_theme/styles/scss/kylo/app.scss
@@ -14,6 +14,11 @@ md-sidenav .collapse-btn {
   color: #F9F9F9;
   background-color: rgb(43, 48, 59);
 }
+md-sidenav{
+  &.mat-sidenav-end{
+    left: auto;
+  }
+}
 
 .site-sidenav  :focus {
   outline: none;
